--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -2,9 +2,9 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="@color/white"
-        android:endColor="@android:color/darker_gray"
+    <gradient android:startColor="@android:color/darker_gray"
+        android:endColor="@android:color/black"
         android:angle="270" />
     <corners android:radius="5dp" />
-    <stroke android:width="1dp" android:color="@android:color/system_accent2_400" />
+    <stroke android:width="1dp" android:color="@android:color/black" />
 </shape>
