Changed orientation and design to landscape
Changed to landscape in manifest.
Edited design, so it fits on landscape.

--- a/app/src/main/res/layout/fragment_multiplayer_menu.xml
+++ b/app/src/main/res/layout/fragment_multiplayer_menu.xml
@@ -14,37 +14,38 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             android:fontFamily="@font/press_start_2p"
             android:scaleY="1.5"
             android:text="Enter username:"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/txtUsername"
+            app:layout_constraintEnd_toEndOf="@+id/txtUsername"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/txtUsername"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
             android:id="@+id/txtUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:ems="10"
             android:fontFamily="@font/press_start_2p"
+            android:hint="Username"
             android:inputType="text"
             android:scaleY="1.5"
-            android:hint="Username"
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btnSearchPlayer"
+            app:layout_constraintEnd_toEndOf="@+id/btnSearchPlayer"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btnSearchPlayer"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
             android:id="@+id/btnTestMulti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
-            android:layout_marginEnd="128dp"
-            android:layout_marginBottom="50dp"
+            android:layout_margin="20dp"
             android:text="to multiplayer screen"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,24 +53,28 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSearchPlayer"
-            android:layout_width="160dp"
+            android:layout_width="260dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_margin="20dp"
+            android:scaleY="1.2"
             android:background="@drawable/button_bg"
             android:fontFamily="@font/press_start_2p"
-            android:text="Search for \nplayer"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="Search for player"
+            app:layout_constraintBottom_toTopOf="@+id/animationSearching"
+            app:layout_constraintEnd_toEndOf="@+id/animationSearching"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/animationSearching"
             app:layout_constraintTop_toBottomOf="@+id/txtUsername" />
 
         <TextView
             android:id="@+id/animationSearching"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:textSize="20sp"
             android:text="Searching-Animation?"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnTestMulti"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnSearchPlayer" />
     </androidx.constraintlayout.widget.ConstraintLayout>
