Add animation, resourcemanagement
Added second animation, corrected the first animation and released MediaPlayer after it is no longer in use.

--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="100dp"
             android:fontFamily="@font/press_start_2p"
             android:scaleY="1.2"
-            android:text="Loading"
+            android:text="Loading..."
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
