--- a/app/src/main/res/layout/fragment_multiplayer_menu.xml
+++ b/app/src/main/res/layout/fragment_multiplayer_menu.xml
@@ -43,7 +43,8 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/btnSearchPlayer"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.5"
+            />
 
         <Button
             android:id="@+id/btnTestMulti"
