--- a/app/src/main/res/layout/fragment_multiplayer_game.xml
+++ b/app/src/main/res/layout/fragment_multiplayer_game.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".MultiplayerGameFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+
+    <include layout="@layout/layout_game_control_multiplayer" />
 
 </FrameLayout>
