--- a/app/src/main/res/layout/fragment_multiplayer_game.xml
+++ b/app/src/main/res/layout/fragment_multiplayer_game.xml
@@ -10,84 +10,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <View
-            android:id="@+id/gameView"
-            android:layout_width="579dp"
-            android:layout_height="412dp"
-            android:background="#000000"
+        <LinearLayout
+            android:id="@+id/leftSideLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toStartOf="@+id/rightSideLayout"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            android:background="#FFC0CB"
+            android:orientation="vertical">
+
+            <View
+                android:id="@+id/gameView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="#000000" />
+
+
+        </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/rightSideLayout"
+            android:layout_width="128dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/leftSideLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/gameView"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="#00FF00"
+            android:orientation="vertical">
 
-
+            <!-- Oberer Teil (50% der Höhe) -->
             <LinearLayout
-                android:layout_width="150"
-                android:layout_height="0dp"
-                android:layout_weight="0.7"
-                android:orientation="vertical">
-
-                <!-- Add player name TextViews here -->
-                <TextView
-                    android:id="@+id/player1Name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Player 1"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/player2Name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Player 2"
-                    android:textColor="#FF0000"
-                    android:textSize="16sp" />
-
-                <!-- Add your content for the upper LinearLayout here -->
-
-            </LinearLayout>
-
-            <LinearLayout
+                android:id="@+id/upperRightLayout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.35"
+                android:layout_weight="1"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/player1TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Spieler 1"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/player2TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Spieler 2"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <!-- Unterer Teil (50% der Höhe) -->
 
                 <include
                     android:id="@+id/include"
                     layout="@layout/layout_game_control_multiplayer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.996" />
-
-                <!-- Add your content for the lower LinearLayout here -->
-
-            </LinearLayout>
+                    android:layout_marginBottom="8dp"/>
 
         </LinearLayout>
-
-
-
 
 
 
