--- a/app/src/main/res/layout/fragment_multiplayer_game.xml
+++ b/app/src/main/res/layout/fragment_multiplayer_game.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/BG_COLOUR">
 
         <LinearLayout
             android:id="@+id/leftSideLayout"
@@ -18,27 +19,29 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#FFC0CB"
+            android:background="@color/BG_COLOUR"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/gameView"
-                android:layout_width="wrap_content"
+            <com.example.supersnake.SnakeGameViewMultiplayer
+                android:id="@+id/snakeGameViewMultiplayer"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#000000" />
+                android:background="@color/BG_COLOUR" />
 
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/rightSideLayout"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_width="128dp"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/leftSideLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#00FF00"
+            android:background="@color/BG_COLOUR"
             android:orientation="vertical">
 
             <!-- Oberer Teil (50% der Höhe) -->
@@ -50,7 +53,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/player1TextView"
+                    android:id="@+id/txtPlayer1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -59,7 +62,7 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/player2TextView"
+                    android:id="@+id/txtPlayer2"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -71,9 +74,10 @@
             <!-- Unterer Teil (50% der Höhe) -->
 
                 <include
-                    android:id="@+id/include"
+                    android:id="@+id/gameControl"
                     layout="@layout/layout_game_control_multiplayer"
                     android:layout_width="match_parent"
+                    android:layout_marginTop="20dp"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"/>
 
