--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="BG_COLOUR">#231f20</color>
     <color name="SNAKE_COLOUR">#c2c2c2</color>
     <color name="FOOD_COLOUR">#e66916</color>
+    <color name="SNAKE_COLOUR2">#7f0000</color>
 </resources>
