--- a/app/src/main/res/layout/fragment_game_over_multiplayer_lost.xml
+++ b/app/src/main/res/layout/fragment_game_over_multiplayer_lost.xml
@@ -65,7 +65,7 @@
             app:layout_constraintVertical_bias="0.455"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/fireworks" />
+            app:lottie_rawRes="@raw/bomb_blast" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animationView2"
@@ -79,7 +79,7 @@
             app:layout_constraintVertical_bias="0.455"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/fireworks" />
+            app:lottie_rawRes="@raw/bomb_blast" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
